[gd_scene load_steps=46 format=3 uid="uid://blkt81xou2yn3"]

[ext_resource type="PhysicsMaterial" uid="uid://deru0wsiqkst8" path="res://Physics/Physics_Player.tres" id="1_tlt2i"]
[ext_resource type="Script" path="res://Crafts/movement.gd" id="2_u0jpy"]
[ext_resource type="Script" path="res://Crafts/health.gd" id="3_t5pgo"]
[ext_resource type="Material" uid="uid://clj5jh6v7iyl0" path="res://Materials/glitz_gray.material" id="4_86idt"]
[ext_resource type="Script" path="res://Crafts/Paladin/power_feed.gd" id="4_wa0wj"]
[ext_resource type="Script" path="res://Weapons/mine_layer.gd" id="5_k78mb"]
[ext_resource type="ArrayMesh" uid="uid://cjqvq2awiksjj" path="res://Crafts/Paladin/Geometry/Turret.obj" id="5_xfqy8"]
[ext_resource type="Resource" uid="uid://b1v0bkr5tqqtn" path="res://Weapons/Mine_Settings/DetnoMine.tres" id="6_5j56a"]
[ext_resource type="Script" path="res://Crafts/Turret.gd" id="6_kbyhi"]
[ext_resource type="Resource" uid="uid://ycpld2m1l5an" path="res://Weapons/Mine_Settings/ForceWave.tres" id="6_on4mc"]
[ext_resource type="Material" uid="uid://bb5au6shernuv" path="res://Materials/gun_metal.material" id="7_vn57e"]
[ext_resource type="Resource" uid="uid://bmlj7n1wkbi8x" path="res://Weapons/Mine_Settings/freeze_mine.tres" id="8_2uvce"]
[ext_resource type="ArrayMesh" uid="uid://oighycb1gyxn" path="res://Crafts/Paladin/Geometry/Barrel.obj" id="8_vb1lh"]
[ext_resource type="Script" path="res://Weapons/shoot.gd" id="9_jmdpj"]
[ext_resource type="Resource" uid="uid://btg44tgnf1ty3" path="res://Weapons/Projectile_Settings/Albatross.tres" id="10_qifet"]
[ext_resource type="Resource" uid="uid://dl2r187pyc150" path="res://Weapons/Projectile_Settings/Dekinetifier.tres" id="11_6q74u"]
[ext_resource type="Resource" uid="uid://cxqc825idl71x" path="res://Weapons/Projectile_Settings/Disruptor.tres" id="12_qp154"]
[ext_resource type="Resource" uid="uid://di45ppgtvat4r" path="res://Weapons/Projectile_Settings/Force.tres" id="13_qjads"]
[ext_resource type="Resource" uid="uid://cdgxmt8vjytu2" path="res://Weapons/Projectile_Settings/Fracture.tres" id="14_jr0f2"]
[ext_resource type="Resource" uid="uid://b6q41js1vtad3" path="res://Weapons/Projectile_Settings/Howitzer.tres" id="15_312ff"]
[ext_resource type="Resource" uid="uid://3uwoulc5cpq3" path="res://Weapons/Projectile_Settings/Detno.tres" id="16_slkj1"]
[ext_resource type="Resource" uid="uid://dtnbonq5t6ay7" path="res://Weapons/Projectile_Settings/Nuclear.tres" id="17_4qsj4"]
[ext_resource type="PackedScene" uid="uid://ckvics5bu7nu7" path="res://Weapons/Projectile Scenes/target_marker.tscn" id="18_8rntr"]
[ext_resource type="Resource" uid="uid://c8lpdri1yqor8" path="res://Weapons/Projectile_Settings/RailGun.tres" id="18_mk4qx"]
[ext_resource type="ArrayMesh" uid="uid://rdgp20h81cgg" path="res://Crafts/Paladin/Geometry/Bezels.obj" id="19_o7sd0"]
[ext_resource type="Material" uid="uid://dnyvoh8p38dpe" path="res://Materials/projectile_gelb.material" id="20_pgaas"]
[ext_resource type="ArrayMesh" uid="uid://bqfb5qxhfsu81" path="res://Crafts/Paladin/Geometry/Hover Pads.obj" id="21_nbvmf"]
[ext_resource type="ArrayMesh" uid="uid://dlj55k56gf1dg" path="res://Crafts/Paladin/Geometry/Hull.obj" id="22_6nli0"]
[ext_resource type="ArrayMesh" uid="uid://cur1dt5mu1fcg" path="res://Crafts/Paladin/Geometry/Lens.obj" id="23_akwwc"]
[ext_resource type="Material" uid="uid://pfaidv5deiuc" path="res://Materials/Rubber.material" id="24_ntgfw"]
[ext_resource type="ArrayMesh" uid="uid://bc0th4psgbu6u" path="res://Crafts/Paladin/Geometry/Rocker.obj" id="25_2svcv"]
[ext_resource type="ArrayMesh" uid="uid://dxoygchqwuuq7" path="res://Crafts/Paladin/Geometry/Sills.obj" id="26_sftul"]
[ext_resource type="ArrayMesh" uid="uid://blmd82yoxs6oa" path="res://Crafts/Paladin/Geometry/Stripe.obj" id="27_84lcm"]
[ext_resource type="ArrayMesh" uid="uid://dm6pa62ys4f7h" path="res://Crafts/Paladin/Geometry/Underbody.obj" id="28_s5ybr"]
[ext_resource type="AudioStream" uid="uid://d0d4pvsfakwo7" path="res://Sounds/Engine Sounds/vehicle.wav" id="29_h0kji"]
[ext_resource type="Script" path="res://Crafts/Paladin/hud.gd" id="30_d1mtt"]
[ext_resource type="Script" path="res://Crafts/Paladin/spedometer.gd" id="31_2inhi"]
[ext_resource type="Script" path="res://UI/crosshairs.gd" id="32_d1lju"]
[ext_resource type="Script" path="res://Crafts/Paladin/Stats.gd" id="32_y2cc4"]
[ext_resource type="Script" path="res://Crafts/Paladin/powermeter.gd" id="33_d1iw3"]
[ext_resource type="Texture2D" uid="uid://cnf121uecbsvr" path="res://UI/Circle_(transparent).png" id="33_kuoxg"]
[ext_resource type="Script" path="res://Crafts/radar.gd" id="34_ami02"]
[ext_resource type="Texture2D" uid="uid://268cdcw8dy0" path="res://Weapons/Icons/Detno.png" id="35_soh2l"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_1yqvq"]
points = PackedVector3Array(0.36, -0.234853, 1.21184, 0.349992, -0.178604, 1.15553, 0.0123336, 0.0257322, 1.14286, 0.344002, -0.25771, 1.23483, 0.36, -0.234853, -0.363079, 0.343156, -0.166282, 1.14333, 0.349992, -0.178604, -0.336958, 0.00634298, 0.0278542, 1.14286, 0.161746, 0.0572631, 0.181394, 0.15054, 0.0881983, -0.0917027, -7.04825e-05, 0.0285615, 1.14286, -0.344072, -0.25771, 1.23483, 0.13137, -0.272527, 1.20918, 0.319969, -0.291996, 1.1754, 0.319969, -0.291996, -0.305988, -0.36, -0.234853, -0.363079, 0.285787, -0.0634252, -0.199628, 0.285717, -0.0634252, 0.493751, -0.350063, -0.178604, -0.336958, 0.18148, -2.8491e-05, -0.234351, 0.181903, 0.000864953, -0.232944, 0.186625, 0.0518653, -0.0890436, 0.150047, 0.08831, -0.0926411, -0.00641349, 0.0278542, 1.14286, -0.150117, 0.08831, -0.0926411, -0.150611, 0.0881983, -0.0917027, -0.32011, -0.291996, 1.1754, -0.131441, -0.272527, 1.20918, -0.0124041, 0.0257322, 1.14286, -0.36, -0.234853, 1.21184, -0.352036, -0.246282, 0.137442, -0.32011, -0.291996, -0.305988, -0.285787, -0.0634252, -0.199628, -0.181973, 0.000864953, -0.232944, -0.181551, -2.8491e-05, -0.234351, -0.350063, -0.178604, 1.15553, -0.343226, -0.166282, 1.14333, -0.161817, 0.0572631, 0.181394, -0.186695, 0.0518653, -0.0890436, -0.285787, -0.0634252, 0.493751)

[sub_resource type="BoxShape3D" id="BoxShape3D_y5xp8"]
size = Vector3(0.683, 0.2, 1.539)

[node name="Paladin" type="RigidBody3D" node_paths=PackedStringArray("speedometer_graphic") groups=["Player"]]
collision_mask = 4294967291
mass = 50.0
physics_material_override = ExtResource("1_tlt2i")
center_of_mass_mode = 1
center_of_mass = Vector3(0, -0.25, -0.25)
continuous_cd = true
contact_monitor = true
max_contacts_reported = 5
script = ExtResource("2_u0jpy")
engine_audio_path = NodePath("Engine Sound")
speedometer_graphic = NodePath("HUD/Spedometer")

[node name="Health" type="Node3D" parent="." node_paths=PackedStringArray("hud_shields", "hud_armor", "hud_health", "hud_draw_target")]
script = ExtResource("3_t5pgo")
hud_shields = NodePath("../HUD/Defence/lbl_Shields")
hud_armor = NodePath("../HUD/Defence/lbl_Armor")
hud_health = NodePath("../HUD/Defence/lbl_Health")
hud_draw_target = NodePath("../HUD/Defence")

[node name="PowerFeed" type="Node3D" parent="." node_paths=PackedStringArray("powermeter_graphic")]
script = ExtResource("4_wa0wj")
powermeter_graphic = NodePath("../HUD/Powermeter")
maxEffectDistance = 25.0

[node name="Mines" type="Node3D" parent="." node_paths=PackedStringArray("lbl_mines")]
script = ExtResource("5_k78mb")
mine_settings_array = Array[Resource]([ExtResource("6_5j56a"), ExtResource("6_on4mc"), ExtResource("8_2uvce")])
lbl_mines = NodePath("../HUD/lbl_mines")

[node name="MineCast" type="RayCast3D" parent="Mines"]
target_position = Vector3(0, -0.5, 0)
collision_mask = 10

[node name="Turret" type="MeshInstance3D" parent="."]
material_override = ExtResource("4_86idt")
mesh = ExtResource("5_xfqy8")
script = ExtResource("6_kbyhi")

[node name="Barrel" type="MeshInstance3D" parent="Turret" node_paths=PackedStringArray("power_node")]
material_override = ExtResource("7_vn57e")
mesh = ExtResource("8_vb1lh")
skeleton = NodePath("../..")
script = ExtResource("9_jmdpj")
weapon_settings_array = Array[Resource]([ExtResource("10_qifet"), ExtResource("11_6q74u"), ExtResource("12_qp154"), ExtResource("13_qjads"), ExtResource("14_jr0f2"), ExtResource("15_312ff"), ExtResource("16_slkj1"), ExtResource("17_4qsj4"), ExtResource("18_mk4qx")])
target_scene = ExtResource("18_8rntr")
power_node = NodePath("../../PowerFeed")

[node name="Camera3D" type="Camera3D" parent="Turret/Barrel"]
cull_mask = 1048574

[node name="TargetCast" type="RayCast3D" parent="Turret/Barrel"]
target_position = Vector3(0, 0, -10000)
collision_mask = 65534

[node name="Body" type="Node3D" parent="."]

[node name="Bezels" type="MeshInstance3D" parent="Body"]
mesh = ExtResource("19_o7sd0")

[node name="Hoverpads" type="MeshInstance3D" parent="Body"]
material_override = ExtResource("20_pgaas")
mesh = ExtResource("21_nbvmf")

[node name="Hull" type="MeshInstance3D" parent="Body"]
material_override = ExtResource("4_86idt")
mesh = ExtResource("22_6nli0")

[node name="Lenses" type="MeshInstance3D" parent="Body"]
mesh = ExtResource("23_akwwc")

[node name="Rocker" type="MeshInstance3D" parent="Body"]
material_override = ExtResource("24_ntgfw")
mesh = ExtResource("25_2svcv")

[node name="Sills" type="MeshInstance3D" parent="Body"]
mesh = ExtResource("26_sftul")

[node name="Stripe" type="MeshInstance3D" parent="Body"]
material_override = ExtResource("7_vn57e")
mesh = ExtResource("27_84lcm")

[node name="Underbody" type="MeshInstance3D" parent="Body"]
material_override = ExtResource("24_ntgfw")
mesh = ExtResource("28_s5ybr")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_1yqvq")

[node name="GroundCheck" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00482178, -0.289917, -0.432846)
collision_mask = 254

[node name="GroundCheck" type="CollisionShape3D" parent="GroundCheck"]
shape = SubResource("BoxShape3D_y5xp8")

[node name="Engine Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("29_h0kji")
autoplay = true

[node name="HUD" type="Control" parent="." node_paths=PackedStringArray("score_label", "falls_label", "vanquishes_label", "level_label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("32_y2cc4")
score_label = NodePath("score_label")
falls_label = NodePath("falls_label")
vanquishes_label = NodePath("vanquishes_label")
level_label = NodePath("level_label")

[node name="Defence" type="Control" parent="HUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -87.5
offset_top = -185.0
offset_right = 87.5
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("30_d1mtt")

[node name="lbl_Shields" type="Label" parent="HUD/Defence"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -27.5
offset_top = -117.0
offset_right = 27.5
offset_bottom = -94.0
grow_horizontal = 2
grow_vertical = 0
text = "S: 100"
horizontal_alignment = 1

[node name="lbl_Armor" type="Label" parent="HUD/Defence"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -27.5
offset_top = -100.0
offset_right = 27.5
offset_bottom = -77.0
grow_horizontal = 2
grow_vertical = 0
text = "A: 100"
horizontal_alignment = 1

[node name="lbl_Health" type="Label" parent="HUD/Defence"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -27.5
offset_top = -84.0
offset_right = 27.5
offset_bottom = -61.0
grow_horizontal = 2
grow_vertical = 0
text = "H: 100"
horizontal_alignment = 1

[node name="Spedometer" type="Control" parent="HUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -185.0
offset_right = 150.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("31_2inhi")

[node name="Powermeter" type="Control" parent="HUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -185.0
offset_right = 150.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("33_d1iw3")

[node name="CrossHairs" type="CenterContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("32_d1lju")

[node name="Radar" type="TextureRect" parent="HUD"]
custom_minimum_size = Vector2(240, 240)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 250.0
grow_horizontal = 0
texture = ExtResource("33_kuoxg")
expand_mode = 1
script = ExtResource("34_ami02")
recon_dot_color = Color(1, 1, 1, 1)
mine_dot_color = Color(0, 0, 1, 1)

[node name="SubViewportContainer" type="SubViewportContainer" parent="HUD/Radar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -120.0
offset_right = 120.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="HUD/Radar/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(240, 240)
render_target_update_mode = 4

[node name="Control" type="Control" parent="HUD/Radar/SubViewportContainer/SubViewport"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="WeaponIcon" type="TextureRect" parent="HUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -71.5
offset_top = -252.0
offset_right = -26.5
offset_bottom = -207.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("35_soh2l")
expand_mode = 2

[node name="lbl_rounds" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.5
offset_top = -205.0
offset_right = -1.5
offset_bottom = -182.0
grow_horizontal = 2
grow_vertical = 0
text = "0 / 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lbl_mines" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1.5
offset_top = -205.0
offset_right = 93.5
offset_bottom = -182.0
grow_horizontal = 2
grow_vertical = 0
text = "0 / 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MineIcon" type="TextureRect" parent="HUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 23.5
offset_top = -252.0
offset_right = 68.5
offset_bottom = -207.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("35_soh2l")
expand_mode = 2

[node name="score_label" type="Label" parent="HUD"]
layout_mode = 1
offset_left = 10.0
offset_top = 7.0
offset_right = 225.0
offset_bottom = 30.0
text = "Score"

[node name="falls_label" type="Label" parent="HUD"]
layout_mode = 1
offset_left = 10.0
offset_top = 27.0
offset_right = 225.0
offset_bottom = 50.0
text = "Falls"

[node name="vanquishes_label" type="Label" parent="HUD"]
layout_mode = 1
offset_left = 10.0
offset_top = 47.0
offset_right = 225.0
offset_bottom = 70.0
text = "Vanquishes"

[node name="level_label" type="Label" parent="HUD"]
layout_mode = 1
offset_left = 10.0
offset_top = 67.0
offset_right = 225.0
offset_bottom = 90.0
text = "Level"
